# ros2_piper_robot

./: .gitignore  README.md  compile_commands.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_bringup/share/robot_bringup/: package.sh
install/robot_description/share/robot_description/: package.sh  package.xml
install/robot_description/share/robot_description/urdf/: _common.xacro  arm.xacro
install/robot_moveit_config/share/robot_moveit_config/: package.ps1  package.sh  package.xml
install/robot_moveit_config/share/robot_moveit_config/config/: piper_arm.srdf
install/robot_moveit_config/share/robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  spawn_controllers.launch.py
install/robot_moveit_servo/lib/robot_moveit_servo/: servo_node
install/robot_moveit_servo/share/robot_moveit_servo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_moveit_servo/share/robot_moveit_servo/cmake/: robot_moveit_servoConfig.cmake
install/robot_moveit_servo/share/robot_moveit_servo/launch/: servo.launch.py
install/robot_teleop/share/robot_teleop/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_teleop/share/robot_teleop/cmake/: robot_teleopConfig.cmake
install/robot_teleop/share/robot_teleop/src/: joy_to_servo.cpp
log/: latest_build
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: gazebo_bridge.yaml
src/robot_bringup/launch/: robot.launch.py  robot.launch.xml  robot_sim.launch.py
src/robot_bringup/worlds/: simple_world.sdf
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: display.launch.py
src/robot_description/rviz/: rviz.rviz
src/robot_description/urdf/: _robot.urdf.xacro  arm.xacro  arm_gazebo.xacro  camera.xacro  gripper.xacro
src/robot_moveit_config/: .setup_assistant
src/robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  piper_arm.ros2_control.xacro  piper_arm.srdf  piper_arm.urdf.xacro  ros2_controllers.yaml
src/robot_moveit_config/launch/: moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_moveit_servo/: CMakeLists.txt
src/robot_moveit_servo/config/: servo_parameters.yaml
src/robot_moveit_servo/launch/: servo_cpp.launch.py
src/robot_moveit_servo/src/: servo_node.cpp
src/robot_perception/: package.xml  setup.py
src/robot_perception/robot_perception/: robot_gesture_teleop.py
src/robot_tasks_motion/: CMakeLists.txt  package.xml
src/robot_tasks_motion/launch/: move_to_pose.launch.py  plan_around_object.launch.py
src/robot_tasks_motion/src/: move_to_pose_node.cpp  pick_and_place.cpp  plan_around_object_node.cpp
src/robot_teleop/: CMakeLists.txt
src/robot_teleop/src/: joy_to_servo.cpp
(+3 files in other folders)
